# worldcup-probabilities

./: .gitignore  README.md  main.py  pyproject.toml  test_date.py  test_fbref.py
.github/workflows/: update_model.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
config/: settings.json
data/historical/: wc_2022.json
data/processed/: group_stage_analysis.json  h2h_matrix.json  match_by_match.json  opportunities.json  props_pipeline_diagnostics.json  props_probabilities.json  test_trade_instructions.json  trade_instructions.json
frontend/: app.js  index.html  style.css
src/: __init__.py  api_football.py  arbitrage_engine.py  backtester.py  cli_backtest.py  dashboard.py  data_loader.py  dixon_coles.py  fbref_scraper.py  fetch_macro_data.py  fetch_props_data.py  market_fetcher.py  match_probs.py  props_model.py  simulator.py  trade_executor.py
src/ml_engine/: __init__.py  bayesian_model.py  catboost_model.py  mcmc_model.py
